Added custom templates for ultimate member

--- a/sass/ultimate-member/um-general.scss
+++ b/sass/ultimate-member/um-general.scss
@@ -14,9 +14,8 @@
 .um-account-side li a.current:hover span.um-account-icon,
 .um-dropdown li a:hover,
 i.um-active-color,
-span.um-active-color
-{
-  color: #2d5c88!important;
+span.um-active-color {
+  color: #2d5c88 !important;
 }
 
 .um .um-field-group-head,
@@ -33,9 +32,8 @@ span.um-active-color
 .um-modal-btn.disabled,
 .um-modal-btn.disabled:hover,
 div.uimob800 .um-account-side li a.current,
-div.uimob800 .um-account-side li a.current:hover
-{
-  background: #2d5c88!important;
+div.uimob800 .um-account-side li a.current:hover {
+  background: #2d5c88 !important;
 }
 
 .um .um-field-group-head:hover,
@@ -51,11 +49,11 @@ div.uimob800 .um-account-side li a.current:hover
 .picker__list-item--selected,
 .picker__list-item--selected:hover,
 .picker--focused .picker__list-item--selected {
-  background: #3c7f8d!important;
+  background: #3c7f8d !important;
 }
 
 .um input[type=submit]:disabled:hover {
-  background: #2d5c88!important;
+  background: #2d5c88 !important;
 }
 
 .um input[type=submit].um-button,
@@ -64,29 +62,29 @@ div.uimob800 .um-account-side li a.current:hover
 .um a.um-button.um-disabled:hover,
 .um a.um-button.um-disabled:focus,
 .um a.um-button.um-disabled:active {
-  background: #2d5c88!important;
+  background: #2d5c88 !important;
 }
 
 .um .um-button.um-alt:hover, .um input[type=submit].um-button.um-alt:hover {
-  background: #e5e5e5!important;
+  background: #e5e5e5 !important;
 }
 
 .um .um-button.um-alt, .um input[type=submit].um-button.um-alt {
-  background: #e5e5e5!important;
+  background: #e5e5e5 !important;
 }
 
 .um a.um-link {
-  color: #2d5c88!important;
+  color: #2d5c88 !important;
 }
 
 .um input[type=submit].um-button:hover,
 .um a.um-button:hover {
-  background-color: #3c7f8d!important;
+  background-color: #3c7f8d !important;
 }
 
 .um a.um-link:hover,
 .um a.um-link-hvr:hover {
-  color: #3c7f8d!important;
+  color: #3c7f8d !important;
 }
 
 .um-profile.um .um-profile-headericon a:hover,
