--- a/style.scss
+++ b/style.scss
@@ -9,5 +9,6 @@ Version: 1.0.0
 Text Domain: base-wp-child
 */
 
-@import "sass/mec";
-@import "sass/um";
+@import "sass/modern-events-calendar/mec-grid-event";
+@import "sass/ultimate-member/um-general";
+@import "sass/ultimate-member/um-profile";
