new members um view

--- a/style.scss
+++ b/style.scss
@@ -12,3 +12,4 @@ Text Domain: base-wp-child
 @import "sass/modern-events-calendar/mec-grid-event";
 @import "sass/ultimate-member/um-general";
 @import "sass/ultimate-member/um-profile";
+@import "sass/ultimate-member/um-members";
