--- a/sass/modern-events-calendar/mec-grid-event.scss
+++ b/sass/modern-events-calendar/mec-grid-event.scss
@@ -5,7 +5,7 @@
 .sm-event-image img {
   object-fit: cover;
   width: 100%;
-  height: 165px;
+  height: 165px !important;
 }
 
 .sm-event-content {
