--- a/sass/ultimate-member/um-profile.scss
+++ b/sass/ultimate-member/um-profile.scss
@@ -28,7 +28,7 @@
           padding: 0 !important;
           top: 0 !important;
 
-          img.um-avatar {
+          img {
             border-radius: 0 !important;
             object-fit: cover;
           }
