--- a/sass/ultimate-member/um-profile.scss
+++ b/sass/ultimate-member/um-profile.scss
@@ -44,16 +44,6 @@
     .sm-profile-description {
       font-size: 12px;
 
-      .sm-profile-contact-button {
-        color: #ffffff;
-        background-color: #3c7f8d;
-        padding: 10px 25px;
-        text-transform: uppercase;
-        font-weight: 600;
-        border-radius: 15px;
-        cursor: pointer;
-      }
-
       .sm-profile-description-text {
         text-transform: uppercase;
       }
@@ -77,6 +67,43 @@
       .sm-profile-description-header-content {
         margin-top: 10px;
         margin-bottom: 25px;
+      }
+
+      .sm-photo-container {
+        display: flex;
+        width: 100%;
+        margin-bottom: 40px;
+
+        div.um-photo {
+          flex: 1;
+          margin-top: 0 !important;
+
+          a {
+            border: none !important;
+            box-shadow: none !important;
+            padding: 0 !important;
+
+            img {
+              border-radius: 0 !important;
+            }
+          }
+        }
+      }
+
+      .sm-contact-container {
+        display: flex;
+        justify-content: center;
+
+        .sm-profile-contact-button {
+          color: #ffffff;
+          background-color: #3c7f8d;
+          padding: 10px 25px;
+          margin: 0px 20px;
+          text-transform: uppercase;
+          font-weight: 600;
+          border-radius: 15px;
+          cursor: pointer;
+        }
       }
     }
   }
