--- a/sass/ultimate-member/um-general.scss
+++ b/sass/ultimate-member/um-general.scss
@@ -92,3 +92,106 @@ div.uimob800 .um-account-side li a.current:hover {
   color: #2d5c88 !important;
 }
 
+.select2-container--default {
+  .select2-selection__placeholder,
+  .select2-selection--single .select2-selection__rendered {
+    color: #666666 !important;
+    line-height: 36px !important;
+    font-family: Roboto, Helvetica, Arial, sans-serif !important;
+    font-size: 13px !important;
+  }
+
+  .select2-search--dropdown .select2-search__field {
+    border: 1px solid #efefef !important;
+    border-radius: 5px !important;
+  }
+}
+
+.select2-container {
+  .select2-selection--single .select2-selection__rendered {
+    padding-left: 0 !important;
+  }
+}
+
+span.select2-results li.select2-results__option {
+  margin: 0 !important;
+  color: #666666 !important;
+  font-family: Roboto, Helvetica, Arial, sans-serif !important;
+  font-weight: 400;
+}
+
+span.select2-results li.select2-results__option.select2-results__option--highlighted {
+  background: #2d5c88 !important;
+  border-radius: 0 !important;
+  color: #ffffff !important;
+}
+
+.select2-container.select2-container--open span.select2-dropdown {
+  border: 1px solid #efefef !important;
+  border-radius: 0 0px 5px 5px !important;
+}
+
+.select2-search input,
+span.select2-results li {
+  font-size: 13px !important;
+  font-family: Roboto, Helvetica, Arial, sans-serif !important;
+}
+
+div.um-field-multiselect .um-field-area.um-field-area-has-icon {
+  ul:first-child {
+    margin-left: 0 !important;
+  }
+
+  .select2.select2-container span.select2-selection.select2-selection--multiple {
+    line-height: 0 !important;
+  }
+}
+
+.um {
+
+  div.um-cover {
+    height: inherit !important;
+    width: fit-content !important;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    .um-cover-e {
+      height: inherit !important;
+
+      img {
+        width: inherit !important;
+      }
+    }
+  }
+
+  .um-header {
+    margin-top: 20px;
+
+    div.um-profile-photo {
+      margin-right: 20px;
+
+      a.um-profile-photo-img {
+        position: initial !important;
+        padding: 0 !important;
+        -moz-border-radius: 0 !important;
+        -webkit-border-radius: 0 !important;
+        border-radius: 0 !important;
+      }
+
+      img {
+        -moz-border-radius: 0 !important;
+        -webkit-border-radius: 0 !important;
+        border-radius: 0 !important;
+      }
+
+      span.um-profile-photo-overlay {
+        -moz-border-radius: 0 !important;
+        -webkit-border-radius: 0 !important;
+        border-radius: 0 !important;
+      }
+    }
+  }
+}
+
+
