clicking on profile photo should not redirect to edit

--- a/sass/modern-events-calendar/mec-grid-event.scss
+++ b/sass/modern-events-calendar/mec-grid-event.scss
@@ -166,10 +166,12 @@
 
 .mec-search-form .mec-dropdown-wrap .mec-dropdown-search {
   flex: 1;
+  padding: 0 !important;
 }
 
 .mec-search-form .mec-date-search {
   flex: 1;
+  padding: 0 !important;
 }
 
 .mec-wrap .mec-totalcal-box i {
