--- a/sass/ultimate-member/um-general.scss
+++ b/sass/ultimate-member/um-general.scss
@@ -194,4 +194,11 @@ div.um-field-multiselect .um-field-area.um-field-area-has-icon {
   }
 }
 
+.um-main-meta {
+  padding: 60px 0 0 0;
+}
+
+.um-modal-btn.alt {
+  color: #FFFFFF !important;
+}
 
