--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,7 @@ Text Domain: base-wp-child
 */
 
 @import "sass/modern-events-calendar/mec-grid-event";
+@import "sass/sailmore/sailmore";
 @import "sass/ultimate-member/um-general";
 @import "sass/ultimate-member/um-profile";
 @import "sass/ultimate-member/um-members";
