--- a/sass/modern-events-calendar/mec-grid-event.scss
+++ b/sass/modern-events-calendar/mec-grid-event.scss
@@ -39,11 +39,7 @@
   margin-top: 30px !important;
 
   .event-color {
-    margin-top: 6px;
-    width: 10px;
-    height: 10px;
-    min-width: 10px;
-    min-height: 10px;
+    display: none !important
   }
 
   a {
