--- a/sass/ultimate-member/um-general.scss
+++ b/sass/ultimate-member/um-general.scss
@@ -52,12 +52,12 @@ div.uimob800 .um-account-side li a.current:hover {
   background: #3c7f8d !important;
 }
 
-.um input[type=submit]:disabled:hover {
+.um input[type="submit"]:disabled:hover {
   background: #2d5c88 !important;
 }
 
-.um input[type=submit].um-button,
-.um input[type=submit].um-button:focus,
+.um input[type="submit"].um-button,
+.um input[type="submit"].um-button:focus,
 .um a.um-button,
 .um a.um-button.um-disabled:hover,
 .um a.um-button.um-disabled:focus,
@@ -65,11 +65,13 @@ div.uimob800 .um-account-side li a.current:hover {
   background: #2d5c88 !important;
 }
 
-.um .um-button.um-alt:hover, .um input[type=submit].um-button.um-alt:hover {
+.um .um-button.um-alt:hover,
+.um input[type="submit"].um-button.um-alt:hover {
   background: #e5e5e5 !important;
 }
 
-.um .um-button.um-alt, .um input[type=submit].um-button.um-alt {
+.um .um-button.um-alt,
+.um input[type="submit"].um-button.um-alt {
   background: #e5e5e5 !important;
 }
 
@@ -77,7 +79,7 @@ div.uimob800 .um-account-side li a.current:hover {
   color: #2d5c88 !important;
 }
 
-.um input[type=submit].um-button:hover,
+.um input[type="submit"].um-button:hover,
 .um a.um-button:hover {
   background-color: #3c7f8d !important;
 }
@@ -120,7 +122,8 @@ span.select2-results li.select2-results__option {
   font-weight: 400;
 }
 
-span.select2-results li.select2-results__option.select2-results__option--highlighted {
+span.select2-results
+  li.select2-results__option.select2-results__option--highlighted {
   background: #2d5c88 !important;
   border-radius: 0 !important;
   color: #ffffff !important;
@@ -142,23 +145,20 @@ div.um-field-multiselect .um-field-area.um-field-area-has-icon {
     margin-left: 0 !important;
   }
 
-  .select2.select2-container span.select2-selection.select2-selection--multiple {
+  .select2.select2-container
+    span.select2-selection.select2-selection--multiple {
     line-height: 0 !important;
   }
 }
 
 .um {
-
   div.um-cover {
-    height: inherit !important;
     width: fit-content !important;
     display: block;
     margin-left: auto;
     margin-right: auto;
 
     .um-cover-e {
-      height: inherit !important;
-
       img {
         width: inherit !important;
       }
@@ -169,6 +169,7 @@ div.um-field-multiselect .um-field-area.um-field-area-has-icon {
     margin-top: 20px;
 
     div.um-profile-photo {
+      width: 100px !important;
       margin-right: 20px;
 
       a.um-profile-photo-img {
@@ -201,9 +202,20 @@ div.um-field-multiselect .um-field-area.um-field-area-has-icon {
 }
 
 .um-modal-btn.alt {
-  color: #FFFFFF !important;
+  color: #ffffff !important;
 }
 
-.um .picker { 
+.um .picker {
   color: initial !important;
+}
+
+.um-account-meta {
+  .um-account-meta-img a,
+  .um-account-name a {
+    pointer-events: none !important;
+    cursor: default !important;
+  }
+  .um-account-profile-link {
+    display: none !important;
+  }
 }
