--- a/sass/ultimate-member/um-members.scss
+++ b/sass/ultimate-member/um-members.scss
@@ -35,19 +35,18 @@ div.sm-members-wrap {
   }
 
   .um-search-filter {
-    width: 25% !important;
+    width: 24% !important;
     padding: 0 10px !important;
-  }
 
-  span.select2.select2-container.select2-container--default {
-    width: calc(100% - 36px) !important;
-  }
+    .select2.select2-container,
+    span.select2.select2-container.select2-container--default,
+    input[type="text"] {
+      width: calc(100% - 36px) !important;
+    }
 
-  .select2.select2-container {
-
-    width: calc(100% - 36px) !important;
-
-    select.select2-selection, span.select2-selection {
+    .select2.select2-container select.select2-selection,
+    span.select2-selection,
+    input[type="text"] {
       border: 1px solid #efefef !important;
       border-radius: 5px !important;
       min-height: 36px !important;
@@ -58,6 +57,10 @@ div.sm-members-wrap {
       color: #666666 !important;
       margin: 0 0 0 -1px !important;
       font-family: Roboto, Helvetica, Arial, sans-serif !important;
+
+      ::placeholder {
+        color: #666666 !important;
+      }
     }
 
     .select2-selection span.select2-selection__arrow:before {
@@ -85,10 +88,10 @@ div.sm-members-wrap {
     div.um-search-filter {
       i {
         float: left;
-        margin: 0;
+        margin: 0 10px;
         text-align: center;
         padding: 10px 0;
-        font-size: 15px; 
+        font-size: 15px;
         color: #2d5c88;
       }
     }
@@ -105,5 +108,9 @@ div.sm-members-wrap {
 
   .mec-color-hover:hover {
     color: #2d5c88 !important;
+  }
+
+  .um-members-pagi .pagi.current {
+    background-color: rgb(45, 92, 136);
   }
 }
