--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,7 @@ Text Domain: base-wp-child
 
 @import "sass/modern-events-calendar/mec-grid-event";
 @import "sass/modern-events-calendar/mec-general";
+@import "sass/modern-events-calendar/mec-category.scss";
 @import "sass/sailmore/sailmore";
 @import "sass/ultimate-member/um-general";
 @import "sass/ultimate-member/um-profile";
